--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <script src="/node_modules/angular/angular.min.js"></script>
   <script src="/node_modules/angular-route/angular-route.min.js"></script>
   <script src="/app/app.module.js"></script>
   <script src="/app/app.routes.js"></script>
   <script src="/app/pages/homepage.component.js"></script>
+  <script src="/app/components/navigation/navigation.component.js"></script>
   
 </head>
 <body ng-app="scrollApp">
