style: description component

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <script src="/node_modules/angular/angular.min.js"></script>
   <script src="/node_modules/angular-route/angular-route.min.js"></script>
   <script src="/app/app.module.js"></script>
   <script src="/app/app.routes.js"></script>
   <script src="/app/pages/homepage.component.js"></script>
   <script src="/app/components/navigation/navigation.component.js"></script>
+  <script src="/app/components/heading/heading.composition.js"></script>
+  <script src="/app/components/description/description.component.js"></script>
   
 </head>
+
 <body ng-app="scrollApp">
   <ng-view></ng-view>
 </body>
